tests/custom/STARIS_2022/operation-type-errors/restrict-type-error/stderr.expected
Error:
    restrict-type-error.essence:4:24:
  |
4 | such that g = restrict(f, d)
  |                        ^
Type error:
	Expected: function bool --> ?
	Got: function int --> int

